--- a/index.html
+++ b/index.html
@@ -88,65 +88,65 @@
       </section>
       <!-- ---------------------------------------------Чем занимаемся -->
       <section class="section work">
-         <div class="container work">
-            <h2 class="work-title">Чем мы занимаемся</h2>
-            <ul class="work-list">
-               <li class="work-item">
-                  <div class="work-overlay-box">
-                     <p class="work-overlay-caption">Десктопные приложения</p>
+         <div class="container">
+            <h2 class="work__title">Чем мы занимаемся</h2>
+            <ul class="work__list">
+               <li class="work__item">
+                  <div class="overlay__box">
+                     <p class="overlay__caption">Десктопные приложения</p>
                   </div>
-                  <img class="work-image" width="370" height="294" src="./images/img.jpg" alt="кодирование">
+                  <img class="work__image" width="370" height="294" src="./images/img.jpg" alt="кодирование">
                </li>
-               <li class="work-item">
-                  <div class="work-overlay-box">
-                     <p class="work-overlay-caption">Мобильные приложения</p>
+               <li class="work__item">
+                  <div class="overlay__box">
+                     <p class="overlay__caption">Мобильные приложения</p>
                   </div>
-                  <img class="work-image" width="370" height="294" src="./images/img1.jpg" alt="сервис">
+                  <img class="work__image" width="370" height="294" src="./images/img1.jpg" alt="сервис">
                </li>
-               <li class="work-item">
-                  <div class="work-overlay-box">
-                     <p class="work-overlay-caption">Дизайнерские решения</p>
+               <li class="work__item">
+                  <div class="overlay__box">
+                     <p class="overlay__caption">Дизайнерские решения</p>
                   </div>
-                  <img class="work-image" width="370" height="294" src="./images/img2.jpg" alt="дизайн">
+                  <img class="work__image" width="370" height="294" src="./images/img2.jpg" alt="дизайн">
                </li>
             </ul>
          </div>
       </section>
       <!-- ---------------------------------------------Наша команда -->
       <section class="section team ">
-         <div class="container team">
-            <h2 class="team-title">Наша команда</h2>
-            <ul class="team-list">
-               <li class="team-item">
+         <div class="container">
+            <h2 class="team__title">Наша команда</h2>
+            <ul class="team__list">
+               <li class="team__item">
                   <img width="270" height="260" src="./images/person1.jpg" alt="персонал1">
                   <div class="team-box">
-                     <h3 class="team-caption">Игорь Демьяненко</h3>
-                     <p class="team-text" lang="en">Product Designer</p>
-                     <ul class="team-icon-list">
-                        <li class="team-icon-item">
-                           <a href="#" class="team-icon-link">
-                              <svg class="icon-team">
+                     <h3 class="team-box__caption">Игорь Демьяненко</h3>
+                     <p class="team-box__text" lang="en">Product Designer</p>
+                     <ul class="team-icon__list">
+                        <li class="team-icon__item">
+                           <a href="#" class="team-icon__link">
+                              <svg class="team-icon__icon">
                                  <use href="./images/icons-svg/symbol-defs.svg#icon-instagram-icon"></use>
                               </svg>
                            </a>
                         </li>
-                        <li class="team-icon-item">
-                           <a href="#" class="team-icon-link">
-                              <svg class="icon-team">
+                        <li class="team-icon__item">
+                           <a href="#" class="team-icon__link">
+                              <svg class="team-icon__icon">
                                  <use href="./images/icons-svg/symbol-defs.svg#icon-twitter-icon"></use>
                               </svg>
                            </a>
                         </li>
-                        <li class="team-icon-item">
-                           <a href="#" class="team-icon-link">
-                              <svg class="icon-team">
+                        <li class="team-icon__item">
+                           <a href="#" class="team-icon__link">
+                              <svg class="team-icon__icon">
                                  <use href="./images/icons-svg/symbol-defs.svg#icon-facebook-icon"></use>
                               </svg>
                            </a>
                         </li>
-                        <li class="team-icon-item">
-                           <a href="#" class="team-icon-link">
-                              <svg class="icon-team">
+                        <li class="team-icon__item">
+                           <a href="#" class="team-icon__link">
+                              <svg class="team-icon__icon">
                                  <use href="./images/icons-svg/symbol-defs.svg#icon-linkedin-icon"></use>
                               </svg>
                            </a>
@@ -154,36 +154,36 @@
                      </ul>
                   </div>
                </li>
-               <li class="team-item">
+               <li class="team__item">
                   <img width="270" height="260" src="./images/person2.jpg" alt="персонал2">
                   <div class="team-box">
-                     <h3 class="team-caption">Ольга Репина</h3>
-                     <p class="team-text" lang="en">Frontend Developer</p>
-                     <ul class="team-icon-list">
-                        <li class="team-icon-item">
-                           <a href="#" class="team-icon-link">
-                              <svg class="icon-team">
+                     <h3 class="team-box__caption">Ольга Репина</h3>
+                     <p class="team-box__text" lang="en">Frontend Developer</p>
+                     <ul class="team-icon__list">
+                        <li class="team-icon__item">
+                           <a href="#" class="team-icon__link">
+                              <svg class="team-icon__icon">
                                  <use href="./images/icons-svg/symbol-defs.svg#icon-instagram-icon"></use>
                               </svg>
                            </a>
                         </li>
-                        <li class="team-icon-item">
-                           <a href="#" class="team-icon-link">
-                              <svg class="icon-team">
+                        <li class="team-icon__item">
+                           <a href="#" class="team-icon__link">
+                              <svg class="team-icon__icon">
                                  <use href="./images/icons-svg/symbol-defs.svg#icon-twitter-icon"></use>
                               </svg>
                            </a>
                         </li>
-                        <li class="team-icon-item">
-                           <a href="#" class="team-icon-link">
-                              <svg class="icon-team">
+                        <li class="team-icon__item">
+                           <a href="#" class="team-icon__link">
+                              <svg class="team-icon__icon">
                                  <use href="./images/icons-svg/symbol-defs.svg#icon-facebook-icon"></use>
                               </svg>
                            </a>
                         </li>
-                        <li class="team-icon-item">
-                           <a href="#" class="team-icon-link">
-                              <svg class="icon-team">
+                        <li class="team-icon__item">
+                           <a href="#" class="team-icon__link">
+                              <svg class="team-icon__icon">
                                  <use href="./images/icons-svg/symbol-defs.svg#icon-linkedin-icon"></use>
                               </svg>
                            </a>
@@ -191,36 +191,36 @@
                      </ul>
                   </div>
                </li>
-               <li class="team-item">
+               <li class="team__item">
                   <img width="270" height="260" src="./images/person3.jpg" alt="персонал3">
                   <div class="team-box">
-                     <h3 class="team-caption">Николай Тарасов</h3>
-                     <p class="team-text" lang="en">Marketing</p>
-                     <ul class="team-icon-list">
-                        <li class="team-icon-item">
-                           <a href="#" class="team-icon-link">
-                              <svg class="icon-team">
+                     <h3 class="team-box__caption">Николай Тарасов</h3>
+                     <p class="team-box__text" lang="en">Marketing</p>
+                     <ul class="team-icon__list">
+                        <li class="team-icon__item">
+                           <a href="#" class="team-icon__link">
+                              <svg class="team-icon__icon">
                                  <use href="./images/icons-svg/symbol-defs.svg#icon-instagram-icon"></use>
                               </svg>
                            </a>
                         </li>
-                        <li class="team-icon-item">
-                           <a href="#" class="team-icon-link">
-                              <svg class="icon-team">
+                        <li class="team-icon__item">
+                           <a href="#" class="team-icon__link">
+                              <svg class="team-icon__icon">
                                  <use href="./images/icons-svg/symbol-defs.svg#icon-twitter-icon"></use>
                               </svg>
                            </a>
                         </li>
-                        <li class="team-icon-item">
-                           <a href="#" class="team-icon-link">
-                              <svg class="icon-team">
+                        <li class="team-icon__item">
+                           <a href="#" class="team-icon__link">
+                              <svg class="team-icon__icon">
                                  <use href="./images/icons-svg/symbol-defs.svg#icon-facebook-icon"></use>
                               </svg>
                            </a>
                         </li>
-                        <li class="team-icon-item">
-                           <a href="#" class="team-icon-link">
-                              <svg class="icon-team">
+                        <li class="team-icon__item">
+                           <a href="#" class="team-icon__link">
+                              <svg class="team-icon__icon">
                                  <use href="./images/icons-svg/symbol-defs.svg#icon-linkedin-icon"></use>
                               </svg>
                            </a>
@@ -228,36 +228,36 @@
                      </ul>
                    </div>
                </li>
-               <li class="team-item">
+               <li class="team__item">
                   <img width="270" height="260" src="./images/person4.jpg" alt="персонал4">
                   <div class="team-box">
-                     <h3 class="team-caption">Михаил Ермаков</h3>
-                     <p class="team-text" lang="en">UI Designer</p>
-                     <ul class="team-icon-list">
-                        <li class="team-icon-item">
-                           <a href="#" class="team-icon-link">
-                              <svg class="icon-team">
+                     <h3 class="team-box__caption">Михаил Ермаков</h3>
+                     <p class="team-box__text" lang="en">UI Designer</p>
+                     <ul class="team-icon__list">
+                        <li class="team-icon__item">
+                           <a href="#" class="team-icon__link">
+                              <svg class="team-icon__icon">
                                  <use href="./images/icons-svg/symbol-defs.svg#icon-instagram-icon"></use>
                               </svg>
                            </a>
                         </li>
-                        <li class="team-icon-item">
-                           <a href="#" class="team-icon-link">
-                              <svg class="icon-team">
+                        <li class="team-icon__item">
+                           <a href="#" class="team-icon__link">
+                              <svg class="team-icon__icon">
                                  <use href="./images/icons-svg/symbol-defs.svg#icon-twitter-icon"></use>
                               </svg>
                            </a>
                         </li>
-                        <li class="team-icon-item">
-                           <a href="#" class="team-icon-link">
-                              <svg class="icon-team">
+                        <li class="team-icon__item">
+                           <a href="#" class="team-icon__link">
+                              <svg class="team-icon__icon">
                                  <use href="./images/icons-svg/symbol-defs.svg#icon-facebook-icon"></use>
                               </svg>
                            </a>
                         </li>
-                        <li class="team-icon-item">
-                           <a href="#" class="team-icon-link">
-                              <svg class="icon-team">
+                        <li class="team-icon__item">
+                           <a href="#" class="team-icon__link">
+                              <svg class="team-icon__icon">
                                  <use href="./images/icons-svg/symbol-defs.svg#icon-linkedin-icon"></use>
                               </svg>
                            </a>
