winished with hw7

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <ul class="work__list">
                <li class="work__item">
                   <div class="overlay__box">
-                     <p class="overlay__caption">Десктопные приложения</p>
+                     <p class="overlay__text">Десктопные приложения</p>
                   </div>
                   <img class="work__image" width="370" height="294" src="./images/img.jpg" alt="кодирование">
                </li>
@@ -369,17 +369,18 @@
            </ul>
         </div>
         <div class="sign-up__container">
-           <form action="" class="sugn-up__form" >
+           <form action="" class="sign-up__form" >
               <div class="sign-up__box">
                   <label for="sign-up-mail" class="sign-up__label">Подпишитесь на рассылку</label>
                   <input type="email" name="sign-up-mail" id="sign-up-mail" class="sign-up__input" placeholder="E-mail">
-              </div>
-            </form>
-              <div class="button">
-                  <button type="submit" class="button__sign-up">Подписаться<svg class="button__icon">
-                     <use href="./images/modal-icon/symbol-defs.svg#icon-sign-up"></use>
-                  </svg></button> 
                </div>
+               <div class="button">
+                  <button type="submit" class="button__sign-up">Подписаться<svg class="button__icon">
+                        <use href="./images/modal-icon/symbol-defs.svg#icon-sign-up"></use>
+                     </svg></button>
+               </div>
+            </form>
+              
         </div>
       </div>
    </footer>
